version/0.12/_sources/api/solver/_autosummary/settings/boundary_conditions.rst.txt
:orphan:

.. _boundary_conditions:

boundary_conditions
===================

.. currentmodule:: ansys.fluent.core.solver.settings_231.boundary_conditions

.. autoclass:: boundary_conditions
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==================================================   =================================

Child                                                                          Summary

==================================================   =================================
:ref:`axis <axis>`                                                       'axis' child.

:ref:`degassing <degassing>`                                        'degassing' child.

:ref:`exhaust_fan <exhaust_fan>`                                  'exhaust_fan' child.

:ref:`fan <fan>`                                                          'fan' child.

:ref:`geometry <geometry_2>`                                         'geometry' child.

:ref:`inlet_vent <inlet_vent>`                                     'inlet_vent' child.

:ref:`intake_fan <intake_fan>`                                     'intake_fan' child.

:ref:`interface <interface>`                                        'interface' child.

:ref:`interior <interior>`                                           'interior' child.

:ref:`mass_flow_inlet <mass_flow_inlet>`                      'mass_flow_inlet' child.

:ref:`mass_flow_outlet <mass_flow_outlet>`                   'mass_flow_outlet' child.

:ref:`network <network>`                                              'network' child.

:ref:`network_end <network_end>`                                  'network_end' child.

:ref:`outflow <outflow>`                                              'outflow' child.

:ref:`outlet_vent <outlet_vent>`                                  'outlet_vent' child.

:ref:`overset <overset>`                                              'overset' child.

:ref:`periodic <periodic>`                                           'periodic' child.

:ref:`porous_jump <porous_jump>`                                  'porous_jump' child.

:ref:`pressure_far_field <pressure_far_field>`             'pressure_far_field' child.

:ref:`pressure_inlet <pressure_inlet>`                         'pressure_inlet' child.

:ref:`pressure_outlet <pressure_outlet>`                      'pressure_outlet' child.

:ref:`radiator <radiator>`                                           'radiator' child.

:ref:`rans_les_interface <rans_les_interface>`             'rans_les_interface' child.

:ref:`recirculation_inlet <recirculation_inlet>`          'recirculation_inlet' child.

:ref:`recirculation_outlet <recirculation_outlet>`       'recirculation_outlet' child.

:ref:`shadow <shadow>`                                                 'shadow' child.

:ref:`symmetry <symmetry>`                                           'symmetry' child.

:ref:`velocity_inlet <velocity_inlet>`                         'velocity_inlet' child.

:ref:`wall <wall>`                                                       'wall' child.

==================================================   =================================

.. rubric:: Commands

============================================================================   ==============================================================================================================

Command                                                                                                                                                                               Summary

============================================================================   ==============================================================================================================
:ref:`change_type <change_type>`                                                                                                                                       'change_type' command.

:ref:`slit_face_zone <slit_face_zone>`                                                                                                   Slit a two-sided wall into two connected wall zones.

:ref:`slit_interior_between_diff_solids <slit_interior_between_diff_solids>`                                               Slit interior created between different solids into coupled walls.

:ref:`create_all_shell_threads <create_all_shell_threads>`                         Mark all finite thickness wall for shell creation. Shell zones will be created at the start of iterations.

:ref:`recreate_all_shells <recreate_all_shells>`                                                  Create shell on all the walls where which were deleted using the command delete-all-shells.

:ref:`delete_all_shells <delete_all_shells>`                                                                                                                     'delete_all_shells' command.

:ref:`orient_face_zone <orient_face_zone>`                                                                                                                              Orient the face zone.

============================================================================   ==============================================================================================================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`setup <setup>`       'setup' child.

====================   ==================

