version/0.19/_sources/api/solver/_autosummary/settings/boundary_conditions.rst.txt
:orphan:

.. _boundary_conditions:

boundary_conditions
===================

.. autoclass:: ansys.fluent.core.solver.settings_241.boundary_conditions.boundary_conditions
    :show-inheritance:

.. rubric:: Attributes

==================================================   =================================

Attribute                                                                      Summary

==================================================   =================================
:ref:`axis <axis_1>`                                                     'axis' child.

:ref:`degassing <degassing>`                                        'degassing' child.

:ref:`exhaust_fan <exhaust_fan>`                                  'exhaust_fan' child.

:ref:`fan <fan>`                                                          'fan' child.

:ref:`geometry <geometry_3>`                                         'geometry' child.

:ref:`inlet_vent <inlet_vent>`                                     'inlet_vent' child.

:ref:`intake_fan <intake_fan>`                                     'intake_fan' child.

:ref:`interface <interface>`                                        'interface' child.

:ref:`interior <interior>`                                           'interior' child.

:ref:`mass_flow_inlet <mass_flow_inlet>`                      'mass_flow_inlet' child.

:ref:`mass_flow_outlet <mass_flow_outlet>`                   'mass_flow_outlet' child.

:ref:`network <network>`                                              'network' child.

:ref:`network_end <network_end>`                                  'network_end' child.

:ref:`outflow <outflow>`                                              'outflow' child.

:ref:`outlet_vent <outlet_vent>`                                  'outlet_vent' child.

:ref:`overset <overset>`                                              'overset' child.

:ref:`periodic <periodic>`                                           'periodic' child.

:ref:`porous_jump <porous_jump>`                                  'porous_jump' child.

:ref:`pressure_far_field <pressure_far_field>`             'pressure_far_field' child.

:ref:`pressure_inlet <pressure_inlet>`                         'pressure_inlet' child.

:ref:`pressure_outlet <pressure_outlet>`                      'pressure_outlet' child.

:ref:`radiator <radiator>`                                           'radiator' child.

:ref:`rans_les_interface <rans_les_interface>`             'rans_les_interface' child.

:ref:`recirculation_inlet <recirculation_inlet>`          'recirculation_inlet' child.

:ref:`recirculation_outlet <recirculation_outlet>`       'recirculation_outlet' child.

:ref:`shadow <shadow>`                                                 'shadow' child.

:ref:`symmetry <symmetry>`                                           'symmetry' child.

:ref:`velocity_inlet <velocity_inlet>`                         'velocity_inlet' child.

:ref:`wall <wall>`                                                       'wall' child.

:ref:`non_reflecting_bc <non_reflecting_bc>`                'non_reflecting_bc' child.

:ref:`perforated_wall <perforated_wall>`                        Perforated wall model.

:ref:`settings <settings_1>`                                         'settings' child.

==================================================   =================================

.. rubric:: Methods

============================================================================   ==============================================================================================================

Method                                                                                                                                                                                Summary

============================================================================   ==============================================================================================================
:ref:`copy <copy_1>`                                                                                                                                                          'copy' command.

:ref:`set_zone_type <set_zone_type>`                                                                                                                                 'set_zone_type' command.

:ref:`slit_face_zone <slit_face_zone>`                                                                                                   Slit a two-sided wall into two connected wall zones.

:ref:`non_overlapping_zone_name <non_overlapping_zone_name>`                                                                Get non-overlapping zone name from the associated interface zone.

:ref:`slit_interior_between_diff_solids <slit_interior_between_diff_solids>`                                               Slit interior created between different solids into coupled walls.

:ref:`create_all_shell_threads <create_all_shell_threads>`                         Mark all finite thickness wall for shell creation. Shell zones will be created at the start of iterations.

:ref:`recreate_all_shells <recreate_all_shells>`                                                  Create shell on all the walls where which were deleted using the command delete-all-shells.

:ref:`delete_all_shells <delete_all_shells>`                                                                                                                     'delete_all_shells' command.

:ref:`orient_face_zone <orient_face_zone>`                                                                                                                              Orient the face zone.

:ref:`knudsen_number_calculator <knudsen_number_calculator>`                                        Utility to compute Kudsen number based on characteristic length and boundary information.

:ref:`set_zone_name <set_zone_name>`                                                                                                                                  Give a zone a new name.

:ref:`add_suffix_or_prefix <add_suffix_or_prefix>`                                                                                                         Add suffix or prefix to zone name.

:ref:`rename_by_adjacency <rename_by_adjacency>`                                                                                                               Rename zone to adjacent zones.

:ref:`rename_to_default <rename_to_default>`                                                                                                                     Rename zone to default name.

============================================================================   ==============================================================================================================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`setup <setup>`       'setup' child.

====================   ==================

